hw2 part 1 added and modified column and modified data commit

--- a/jsontable.html
+++ b/jsontable.html
@@ -16,6 +16,7 @@
                 <th>Extension</th>
                 <th>Joining Date</th>
                 <th>Salary</th>
+		<th>Country</th>
             </tr>
         </thead>
         <tfoot>
@@ -26,6 +27,7 @@
                 <th>Extension</th>
                 <th>Joining Date</th>
                 <th>Salary</th>
+		<th>Country</th>
             </tr>
         </tfoot>
     </table>
@@ -45,7 +47,9 @@
                 {"data": "office"},
                 {"data": "extension"},
                 {"data": "joining_date"},
-                {"data": "salary"}
+                {"data": "salary"},
+		{"data": "country"}
+		
             ]
         });   
     });
