--- a/xmltable.html
+++ b/xmltable.html
@@ -1,4 +1,4 @@
-<!-- Source: http://ecis.seattleu.edu/lee/5315/jsonxml/xmltable.html -->
+	<!-- Source: http://ecis.seattleu.edu/lee/5315/jsonxml/xmltable.html -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -22,7 +22,7 @@
                 $(this).find('TITLE').text(),
                 $(this).find('YEAR').text(),
                 $(this).find('PRICE').text(),
-                $(this).find('COMPANY').text(),
+                $(this).find('GENRE').text(),
                 $(this).find('COUNTRY').text()
               ] ).draw( false );
              });
@@ -40,7 +40,7 @@
             <th>Title</th>
             <th>Year</th>
             <th>Price</th>
-            <th>Company</th>
+            <th>Genre</th>
             <th>Country</th>
         </tr>
     </thead>
@@ -51,7 +51,7 @@
             <th>Title</th>
             <th>Year</th>
             <th>Price</th>
-            <th>Company</th>
+            <th>Genre</th>
             <th>Country</th>
         </tr>
     </tfoot>
